karpenter/nodepool-games-spot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karpenter
  labels:
    name: karpenter
